css/style.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');

body {
  margin: 0;
  background-color: #ffffff;
  font-family: 'Rubik', sans-serif;
  font-size: 18px;
}
.screen-reader {
  position: absolute;
  left: -100vw;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}
.image-block {
  display: flex;
}
.button {
  background-color: hsl(231, 69%, 60%);
  color: #ffffff;
  font-family: 'Rubik', sans-serif;
  font-size: 14px;
  font-weight: 500;
  border: 2px solid hsl(231, 69%, 60%);
  border-radius: 5px;
  padding: 10px 20px;
  cursor: pointer;
}
.button:hover,
.button:focus {
  background-color: #ffffff;
  color: hsl(231, 69%, 60%);
}
/* Common menu styles for header and footer nav bar */
.menu {
  list-style: none;
  display: flex;
  margin: 0;
}
.menu__item {
  margin-right: 40px;
}
.menu__link {
  font-size: 14px;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0.07em;
}
.menu__link:hover,
.menu__link:focus {
  color: hsl(0, 94%, 66%);
}
/* Header Section */
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 50px 150px;
}
.header__menu__link {
  color: hsl(229, 31%, 21%);
}
.header__menu__link__button {
  color: #ffffff;
  background: hsl(0, 94%, 66%);
  border: 2px solid hsl(0, 94%, 66%);
  border-radius: 5px;
  padding: 10px 30px;
}
.header__menu__link__button:hover,
.header__menu__link__button:focus {
  color: hsl(0, 94%, 66%);
  background: #ffffff;
}
/* Intro Section */
.intro {
  position: relative;
  display: flex;
  padding: 50px 75px 50px 150px;
  align-items: center;
}
.intro__text-block {
  flex: 1 1 0;
}
.intro__title {
  color: hsl(229, 31%, 21%);
  font-weight: 500;
  font-size: 48px;
  margin: 0;
}
.intro__paragraph {
  color: hsl(229, 8%, 60%);
  padding-right: 20px;
  line-height: 1.5;
  margin: 20px 70px 30px 0;
}
.intro__firefox-button {
  background-color: hsl(0, 0%, 93%);
  color: hsl(229, 31%, 21%);
  border: 2px solid hsl(0, 0%, 93%);
  margin-left: 10px;
}
.intro__firefox-button:hover,
.intro__firefox-button:focus {
  background-color: #ffffff;
  border: 2px solid hsl(229, 31%, 21%);
}
.intro__image-block {
  flex: 1 1 0;
}
.intro__image {
  width: 100%;
}
.background-blue-block-right {
  height: 350px;
  width: 34vw;
  background: hsl(231, 69%, 60%);
  border-bottom-left-radius: 40%;
  position: absolute;
  right: 0;
  bottom: 25px;
  z-index: -1;
}
/* Features section */
.features {
  padding: 50px 150px 100px;
  position: relative;
}
.features__intro {
  text-align: center;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
}
.features__title {
  font-size: 30px;
  font-weight: 500;
  color: hsl(229, 31%, 21%);
  grid-column: 2;
}
.features__paragraph {
  color: hsl(229, 8%, 60%);
  grid-column: 2;
  margin: 15px;
}
.features__buttons {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 0;
  margin: 50px 0;
  grid-column: 2;
}
.features__button {
  background: #ffffff;
  color: hsl(225, 7%, 45%);
  font-family: 'Rubik', sans-serif;
  font-size: 18px;
  border: none;
  border-bottom: 1px solid hsl(229, 8%, 60%);
  padding: 25px 50px;
  cursor: pointer;
}
.features__button:hover,
.features__button:focus {
  color: hsl(0, 94%, 66%);
}
.features__current-button {
  color: hsl(229, 31%, 21%);
  border-bottom: 1px solid hsl(0, 94%, 66%);
  box-shadow: inset 0 -5px 0 hsl(0, 94%, 66%);
}
.features__current-button:hover,
.features__current-button:focus {
  color: hsl(229, 31%, 21%);
}
.features__facts {
  display: grid;
  grid-template-columns: 1fr;
}
.features__fact {
  grid-column: 1;
  grid-row: 1;
  display: none;
  grid-template-columns: 40vw 1fr;
  grid-gap: 125px;
  align-items: center;
}
.features__current-fact {
  display: grid;
}
.features__fact__image {
  width: 100%;
}
.features__fact__title {
  color: hsl(229, 31%, 21%);
  font-weight: 500;
  font-size: 30px;
  margin: 0;
}
.features__fact__paragraph {
  color: hsl(229, 8%, 60%);
  margin: 25px 0;
}
.background-blue-block-left {
  height: 390px;
  width: 44vw;
  background: hsl(231, 69%, 60%);
  border-bottom-right-radius: 40%;
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: -1;
}
/* Contact Section */
.contact {
  background: hsl(231, 69%, 60%);
  color: #ffffff;
  text-align: center;
  padding: 50px;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
}
.contact > * {
  grid-column: 2;
}
.contact__paragraph {
  text-transform: uppercase;
  letter-spacing: 0.2em;
}
.contact__title {
  font-weight: 500;
  font-size: 34px;
  padding: 0 75px;
}
.contact__input-block {
  display: inline-flex;
  flex-direction: column;
  position: relative;
}
.contact__input {
  color: hsl(229, 31%, 21%);
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 5px;
  padding: 10px 20px;
  font-family: 'Rubik', sans-serif;
  font-weight: 400;
  font-size: 14px;
  box-sizing: border-box;
  width: 24vw;
}
.contact__input.incorrect {
  border: 2px solid hsl(0, 94%, 66%);
  border-radius: 5px 5px 0 0;
}
.contact__error-icon {
  display: none;
  position: absolute;
  top: 10px;
  right: 20px;
}
.contact__messages {
  display: grid;
}
.contact__message {
  visibility: hidden;
  grid-column: 1;
  grid-row: 1;
  font-size: 12px;
  font-weight: 500;
  font-style: italic;
  text-align: left;
  padding: 5px;
  border-radius: 0 0 5px 5px;
  margin: 0;
}
.contact__error-message {
  background: hsl(0, 94%, 66%);
  color: #ffffff;
  border: 2px solid hsl(0, 94%, 66%);
}
.contact__sent-message {
  background: #106527;
  color: #ffffff;
  border: 2px solid #106527;
}
.contact__submit-button {
  color: #ffffff;
  background: hsl(0, 94%, 66%);
  border: 2px solid hsl(0, 94%, 66%);
  border-radius: 5px;
  padding: 10px 20px;
  font-family: 'Rubik', sans-serif;
  font-weight: 500;
  font-size: 14px;
  margin-left: 10px;
  cursor: pointer;
}
.contact__submit-button:hover,
.contact__submit-button:focus {
  color: hsl(0, 94%, 66%);
  background: #ffffff;
}

/* Footer Section */
.footer {
  background-color: hsl(229, 31%, 21%);
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  padding: 50px 150px 10px;
}
.footer__logo-menu-block {
  display: flex;
  align-items: center;
}
.footer__menu {
  padding-left: 50px;
}
.footer__menu__link {
  color: #ffffff;
}
.footer__social-links {
  list-style: none;
  display: flex;
  margin: 0;
  padding: 0;
}
.footer__social-link {
  margin-right: 40px;
}
.footer__social-link svg:hover path,
.footer__social-link:focus svg path {
  fill: hsl(0, 94%, 66%);
}
/* Attribution Section */
.attribution {
  font-size: 11px;
  text-align: center;
  flex-basis: 100%;
  margin-top: 40px;
  color: #ffffff;
}
.attribution a {
  color: #ffffff;
}

